==> IRNAS/ubxlib/port/platform/zephyr/src/u_port_spi.c <==
#include <zephyr/types.h>
#include <kernel.h>
#include <drivers/spi.h>
#include <device.h>
#include <soc.h>
#include "stddef.h"
#include "stdint.h"
#include "stdbool.h"
#include "u_error_common.h"
#include "u_port.h"
#include "u_port_os.h"
#include "u_port_gpio.h"
#include "u_port_spi.h"
#include "u_port_private.h"
#include "version.h"
# define U_PORT_SPI_MAX_NUM 5

int32_t uPortSpiOpen(int32_t spi, int32_t pinMosi, int32_t pinMiso,
                     int32_t pinClk, bool controller)
{
    int32_t handleOrErrorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    const struct device *pDevice = NULL;
    uCommonSpiControllerDevice_t device = U_COMMON_SPI_CONTROLLER_DEVICE_DEFAULTS(-1);

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        // On Zephyr the pins are set at compile time so those passed
        // into here must be non-valid
        if ((spi >= 0) && (spi < sizeof(gSpiCfg) / sizeof(gSpiCfg[0])) &&
            (gSpiCfg[spi].pDevice == NULL) && controller &&
            (pinMosi < 0) && (pinMiso < 0) && (pinClk < 0)) {
            switch (spi) {
                case 0:
#if KERNEL_VERSION_MAJOR < 3
                    pDevice = device_get_binding("SPI_0");
#else
                    pDevice = DEVICE_DT_GET_OR_NULL(DT_NODELABEL(spi0));
#endif
                    break;
                case 1:
#if KERNEL_VERSION_MAJOR < 3
                    pDevice = device_get_binding("SPI_1");
#else
                    pDevice = DEVICE_DT_GET_OR_NULL(DT_NODELABEL(spi1));
#endif
                    break;
                case 2:
#if KERNEL_VERSION_MAJOR < 3
                    pDevice = device_get_binding("SPI_2");
#else
                    pDevice = DEVICE_DT_GET_OR_NULL(DT_NODELABEL(spi2));
#endif
                    break;
                case 3:
#if KERNEL_VERSION_MAJOR < 3
                    pDevice = device_get_binding("SPI_3");
#else
                    pDevice = DEVICE_DT_GET_OR_NULL(DT_NODELABEL(spi3));
#endif
                    break;
                case 4:
#if KERNEL_VERSION_MAJOR < 3
                    pDevice = device_get_binding("SPI_4");
#else
                    pDevice = DEVICE_DT_GET_OR_NULL(DT_NODELABEL(spi4));
#endif
                    break;
                default:
                    break;
            }

            if (pDevice != NULL) {
                handleOrErrorCode = setSpiConfig(&(gSpiCfg[spi]), &device);
                if (handleOrErrorCode == 0) {
                    // Hook the device data structure into the entry
                    // to flag that it is in use
                    gSpiCfg[spi].pDevice = pDevice;
                    // Return the SPI HW block number as the handle
                    handleOrErrorCode = spi;
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return handleOrErrorCode;
}

int32_t uPortSpiControllerSetDevice(int32_t handle,
                                    const uCommonSpiControllerDevice_t *pDevice)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gSpiCfg) / sizeof(gSpiCfg[0])) &&
            (gSpiCfg[handle].pDevice != NULL) && (pDevice != NULL)) {
            errorCode = setSpiConfig(&(gSpiCfg[handle]), pDevice);
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}

int32_t uPortSpiControllerGetDevice(int32_t handle,
                                    uCommonSpiControllerDevice_t *pDevice)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    uPortSpiCfg_t *pSpiCfg;
    uint16_t operation;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gSpiCfg) / sizeof(gSpiCfg[0])) &&
            (gSpiCfg[handle].pDevice != NULL) && (pDevice != NULL)) {
            pSpiCfg = &(gSpiCfg[handle]);
            pDevice->pinSelect = -1;
            pDevice->startOffsetNanoseconds = 0;
#if KERNEL_VERSION_MAJOR < 3
            if (pSpiCfg->spiCsControl.gpio_dev != NULL) {
                pDevice->pinSelect = pSpiCfg->pinSelect;
                if ((pSpiCfg->spiCsControl.gpio_dt_flags & GPIO_ACTIVE_LOW) != GPIO_ACTIVE_LOW) {
                    pDevice->pinSelect |= U_COMMON_SPI_PIN_SELECT_INVERTED;
                }
                pDevice->startOffsetNanoseconds = pSpiCfg->spiCsControl.delay * 1000;
            }
#else
            if (pSpiCfg->spiCsControl.gpio.port != NULL) {
                pDevice->pinSelect = pSpiCfg->pinSelect;
                if ((pSpiCfg->spiCsControl.gpio.dt_flags & GPIO_ACTIVE_LOW) != GPIO_ACTIVE_LOW) {
                    pDevice->pinSelect |= U_COMMON_SPI_PIN_SELECT_INVERTED;
                }
                pDevice->startOffsetNanoseconds = pSpiCfg->spiCsControl.delay * 1000;
            }
#endif
            pDevice->stopOffsetNanoseconds = pDevice->startOffsetNanoseconds;
            pDevice->sampleDelayNanoseconds = 0; // Not an option in Zephyr
            pDevice->frequencyHertz = pSpiCfg->spiConfig.frequency;
            pDevice->mode = 0;
            operation = pSpiCfg->spiConfig.operation;
            if ((operation & SPI_MODE_CPOL) == SPI_MODE_CPOL) {
                pDevice->mode |= U_COMMON_SPI_MODE_CPOL_BIT_MASK;
            }
            if ((operation & SPI_MODE_CPHA) == SPI_MODE_CPHA) {
                pDevice->mode |= U_COMMON_SPI_MODE_CPHA_BIT_MASK;
            }
            pDevice->lsbFirst = ((operation & SPI_TRANSFER_LSB) == SPI_TRANSFER_LSB);
            // The word size in the operation field is in bits
            // do this last as it affects the contents of operation
            pDevice->wordSizeBytes = SPI_WORD_SIZE_GET(operation) / 8;
            pDevice->fillWord = 0xFF; // Not an option in Zephyr
            errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}

uint64_t uPortSpiControllerSendReceiveWord(int32_t handle, uint64_t value,
                                           size_t bytesToSendAndReceive)
{
    uint64_t valueReceived = 0;
    uPortSpiCfg_t *pSpiCfg;
    struct spi_buf sendBuffer;
    struct spi_buf_set sendBufferList;
    struct spi_buf receiveBuffer;
    struct spi_buf_set receiveBufferList;
    uint16_t operation;
    bool reverseBytes = false;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        if ((handle >= 0) && (handle < sizeof(gSpiCfg) / sizeof(gSpiCfg[0])) &&
            (gSpiCfg[handle].pDevice != NULL) &&
            (bytesToSendAndReceive <= sizeof(value))) {
            pSpiCfg = &(gSpiCfg[handle]);
            operation = pSpiCfg->spiConfig.operation;
            // Need to perform byte reversal if the length of the word we
            // are sending is greater than one byte, there is a mismatch between
            // the endianness of this processor and the endianness of
            // bit-transmission, and it will only work if the word size is set
            // to eight bits
            reverseBytes = ((bytesToSendAndReceive > 1) &&
                            (((operation & SPI_TRANSFER_LSB) == SPI_TRANSFER_LSB) !=
                             U_PORT_IS_LITTLE_ENDIAN) &&
                            (SPI_WORD_SIZE_GET(operation) == 8));

            if (reverseBytes) {
                U_PORT_BYTE_REVERSE(value, bytesToSendAndReceive);
            }

            sendBuffer.buf = &value;
            sendBuffer.len = bytesToSendAndReceive;
            sendBufferList.buffers = &sendBuffer;
            sendBufferList.count = 1;

            receiveBuffer.buf = &valueReceived;
            receiveBuffer.len = bytesToSendAndReceive;
            receiveBufferList.buffers = &receiveBuffer;
            receiveBufferList.count = 1;

            spi_transceive(pSpiCfg->pDevice, &(pSpiCfg->spiConfig),
                           &sendBufferList, &receiveBufferList);

            if (reverseBytes) {
                U_PORT_BYTE_REVERSE(valueReceived, bytesToSendAndReceive);
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return valueReceived;
}

int32_t uPortSpiControllerSendReceiveBlock(int32_t handle, const char *pSend,
                                           size_t bytesToSend, char *pReceive,
                                           size_t bytesToReceive)
{
    int32_t errorCodeOrReceiveSize = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    uPortSpiCfg_t *pSpiCfg;
    struct spi_buf sendBuffer;
    struct spi_buf_set sendBufferList;
    struct spi_buf_set *pSendBufferList = NULL;
    struct spi_buf receiveBuffer;
    struct spi_buf_set receiveBufferList;
    struct spi_buf_set *pReceiveBufferList = NULL;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCodeOrReceiveSize = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gSpiCfg) / sizeof(gSpiCfg[0])) &&
            (gSpiCfg[handle].pDevice != NULL)) {
            pSpiCfg = &(gSpiCfg[handle]);

            if (pSend != NULL) {
                sendBuffer.buf = (char *) pSend;
                sendBuffer.len = bytesToSend;
                sendBufferList.buffers = &sendBuffer;
                sendBufferList.count = 1;
                pSendBufferList = &sendBufferList;
            }

            if (pReceive != NULL) {
                receiveBuffer.buf = pReceive;
                receiveBuffer.len = bytesToReceive;
                receiveBufferList.buffers = &receiveBuffer;
                receiveBufferList.count = 1;
                pReceiveBufferList = &receiveBufferList;
            } else {
                bytesToReceive = 0;
            }

            errorCodeOrReceiveSize = spi_transceive(pSpiCfg->pDevice, &(pSpiCfg->spiConfig),
                                                    pSendBufferList, pReceiveBufferList);
            if (errorCodeOrReceiveSize == 0) {
                errorCodeOrReceiveSize = bytesToReceive;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCodeOrReceiveSize;
}
