==> u-blox/ubxlib/port/platform/nrf5sdk/src/u_port_spi.c <==
#include "stddef.h"
#include "stdint.h"
#include "stdbool.h"
#include "string.h"   // memset()
#include "limits.h"   // UINT8_MAX
#include "u_error_common.h"
#include "u_port.h"
#include "u_port_os.h"
#include "u_port_spi.h"
#include "nrf.h"
#include "nrfx_spi.h"
#include "nrfx_spim.h"
# define U_PORT_SPI_MAX_NUM 4

int32_t uPortSpiOpen(int32_t spi, int32_t pinMosi, int32_t pinMiso,
                     int32_t pinClk, bool controller)
{
    int32_t handleOrErrorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    nrfx_spim_t instance = {0};
    nrfx_spim_config_t cfg = NRFX_SPIM_DEFAULT_CONFIG;
    uPortSemaphoreHandle_t completionSemaphore;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((spi >= 0) && (spi < sizeof(gSpiData) / sizeof(gSpiData[0])) &&
            (gSpiData[spi].instance.p_reg == NULL) && controller &&
            ((pinMosi >= 0) || (pinMiso >= 0)) && (pinClk >= 0)) {
            handleOrErrorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
            switch (spi) {
                case 0:
#if NRFX_SPIM0_ENABLED
                    instance.p_reg        = NRF_SPIM0;
                    instance.drv_inst_idx = NRFX_SPIM0_INST_IDX;
#endif
                    break;
                case 1:
#if NRFX_SPIM1_ENABLED
                    instance.p_reg        = NRF_SPIM1;
                    instance.drv_inst_idx = NRFX_SPIM1_INST_IDX;
#endif
                    break;
                case 2:
#if NRFX_SPIM2_ENABLED
                    instance.p_reg        = NRF_SPIM2;
                    instance.drv_inst_idx = NRFX_SPIM2_INST_IDX;
#endif
                    break;
                case 3:
#if NRFX_SPIM3_ENABLED
                    instance.p_reg        = NRF_SPIM3;
                    instance.drv_inst_idx = NRFX_SPIM3_INST_IDX;
#endif
                    break;
                default:
                    break;
            }
            if (instance.p_reg != NULL) {
                handleOrErrorCode = uPortSemaphoreCreate(&completionSemaphore, 0, 1);
                if (handleOrErrorCode == 0) {
                    cfg.sck_pin = pinClk;
                    if (pinMosi >= 0) {
                        cfg.mosi_pin = pinMosi;
                    }
                    if (pinMiso >= 0) {
                        cfg.miso_pin = pinMiso;
                    }
                    handleOrErrorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
                    if (nrfx_spim_init(&instance, &cfg, eventHandlerIrq, &(gSpiData[spi])) == NRFX_SUCCESS) {
                        // Copy the values into our instance storage
                        gSpiData[spi].instance = instance;
                        gSpiData[spi].cfg = cfg;
                        gSpiData[spi].completionSemaphore = completionSemaphore;
                        // Return the SPI HW block number as the handle
                        handleOrErrorCode = spi;
                    } else {
                        // Clean up on error
                        uPortSemaphoreDelete(completionSemaphore);
                    }
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return handleOrErrorCode;
}

int32_t uPortSpiControllerSetDevice(int32_t handle,
                                    const uCommonSpiControllerDevice_t *pDevice)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    nrfx_spim_config_t cfg = NRFX_SPIM_DEFAULT_CONFIG;
    int32_t offsetDuration;
    int32_t pinSelect;
    bool pinSelectInverted;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gSpiData) / sizeof(gSpiData[0])) &&
            (gSpiData[handle].instance.p_reg != NULL) && (pDevice != NULL)) {
            errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
            if (configIsDifferent(&(gSpiData[handle].cfg), pDevice)) {
                errorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
                // If the configuration we're given is not the same as
                // the current one we need to un-initialise and re-initialise
                // SPI with the new configuration
                nrfx_spim_uninit(&(gSpiData[handle].instance));
                cfg.sck_pin = gSpiData[handle].cfg.sck_pin;
                cfg.mosi_pin = gSpiData[handle].cfg.mosi_pin;
                cfg.miso_pin = gSpiData[handle].cfg.miso_pin;
                if (gSpiData[handle].instance.p_reg == NRF_SPIM3) {
                    // Apparently only instance 3 can support this and the
                    // other things under NRFX_SPIM_EXTENDED_ENABLED,
                    // i.e. rx_delay and ss_duration; we use this as a marker
                    // (and it is in any case required for ss_duration support)
                    cfg.use_hw_ss = true;
                }
                cfg.ss_pin = NRFX_SPIM_PIN_NOT_USED;
                if (pDevice->pinSelect >= 0) {
                    pinSelectInverted = ((pDevice->pinSelect & U_COMMON_SPI_PIN_SELECT_INVERTED) ==
                                         U_COMMON_SPI_PIN_SELECT_INVERTED);
                    pinSelect = pDevice->pinSelect & ~U_COMMON_SPI_PIN_SELECT_INVERTED;
                    cfg.ss_pin = pinSelect;
                    cfg.ss_active_high = pinSelectInverted;
                    if (cfg.use_hw_ss) {
                        offsetDuration = pDevice->startOffsetNanoseconds;
                        if (pDevice->stopOffsetNanoseconds > offsetDuration) {
                            offsetDuration = pDevice->stopOffsetNanoseconds;
                        }
                        cfg.ss_duration = nanosecondsToClocks(offsetDuration);
                    }
                }
                cfg.orc = (uint8_t) pDevice->fillWord;
                cfg.frequency = frequencyHertzToNrf52(pDevice->frequencyHertz);
                // These enums are a direct match
                cfg.mode = (nrf_spim_mode_t) pDevice->mode;
                cfg.bit_order = NRF_SPIM_BIT_ORDER_MSB_FIRST;
                if (pDevice->lsbFirst) {
                    cfg.bit_order = NRF_SPIM_BIT_ORDER_LSB_FIRST;
                }
                if (cfg.use_hw_ss) {
                    cfg.rx_delay = nanosecondsToClocks(pDevice->sampleDelayNanoseconds);
                }
                if (nrfx_spim_init(&(gSpiData[handle].instance), &cfg, eventHandlerIrq,
                                   &(gSpiData[handle])) == NRFX_SUCCESS) {
                    // Now we can store the new configuration
                    gSpiData[handle].cfg = cfg;
                    errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}

int32_t uPortSpiControllerGetDevice(int32_t handle,
                                    uCommonSpiControllerDevice_t *pDevice)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gSpiData) / sizeof(gSpiData[0])) &&
            (gSpiData[handle].instance.p_reg != NULL) && (pDevice != NULL)) {
            getDevice(&(gSpiData[handle].cfg), pDevice);
            errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}

uint64_t uPortSpiControllerSendReceiveWord(int32_t handle, uint64_t value,
                                           size_t bytesToSendAndReceive)
{
    uint64_t valueReceived = 0;
    bool reverseBytes = false;
    nrfx_spim_xfer_desc_t xferDesc = {0};

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        if ((handle >= 0) && (handle < sizeof(gSpiData) / sizeof(gSpiData[0])) &&
            (gSpiData[handle].instance.p_reg != NULL) &&
            (bytesToSendAndReceive <= sizeof(value))) {

            // Need to perform byte reversal if the length of the word we
            // are sending is greater than one byte and if there is a
            // mismatch between the endianness of this processor and the
            // endianness of bit-transmission
            reverseBytes = ((bytesToSendAndReceive > 1) &&
                            ((gSpiData[handle].cfg.bit_order == NRF_SPIM_BIT_ORDER_LSB_FIRST) !=
                             U_PORT_IS_LITTLE_ENDIAN));

            if (reverseBytes) {
                U_PORT_BYTE_REVERSE(value, bytesToSendAndReceive);
            }

            if (gSpiData[handle].cfg.mosi_pin != NRFX_SPIM_PIN_NOT_USED) {
                xferDesc.p_tx_buffer = (uint8_t const *) &value;
                xferDesc.tx_length = bytesToSendAndReceive;
            }
            if (gSpiData[handle].cfg.miso_pin != NRFX_SPIM_PIN_NOT_USED) {
                xferDesc.p_rx_buffer = (uint8_t *) &valueReceived;
                xferDesc.rx_length = bytesToSendAndReceive;
            }

            transfer(&(gSpiData[handle]), &xferDesc);

            if (reverseBytes) {
                U_PORT_BYTE_REVERSE(valueReceived, bytesToSendAndReceive);
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return valueReceived;
}

int32_t uPortSpiControllerSendReceiveBlock(int32_t handle, const char *pSend,
                                           size_t bytesToSend, char *pReceive,
                                           size_t bytesToReceive)
{
    int32_t errorCodeOrReceiveSize = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    nrfx_spim_xfer_desc_t xferDesc = {0};

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCodeOrReceiveSize = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gSpiData) / sizeof(gSpiData[0])) &&
            (gSpiData[handle].instance.p_reg != NULL) &&
            ((gSpiData[handle].cfg.mosi_pin != NRFX_SPIM_PIN_NOT_USED) || (bytesToSend == 0)) &&
            ((gSpiData[handle].cfg.miso_pin != NRFX_SPIM_PIN_NOT_USED) || (bytesToReceive == 0))) {

            if (gSpiData[handle].cfg.mosi_pin != NRFX_SPIM_PIN_NOT_USED) {
                xferDesc.p_tx_buffer = (uint8_t const *) pSend;
                xferDesc.tx_length = bytesToSend;
            }
            if (gSpiData[handle].cfg.miso_pin != NRFX_SPIM_PIN_NOT_USED) {
                xferDesc.p_rx_buffer = (uint8_t *) pReceive;
                xferDesc.rx_length = bytesToReceive;
            }

            errorCodeOrReceiveSize = transfer(&(gSpiData[handle]), &xferDesc);
            if (errorCodeOrReceiveSize == 0) {
                errorCodeOrReceiveSize = (int32_t) bytesToReceive;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCodeOrReceiveSize;
}
